# admin-ai-assistant

./: .gitignore  README.md  ai-assistant-for-admin.ipynb  pyproject.toml
